2.0RC1
Added Avalon component wrapper so JCrontab can be used as an avalon component
Added XMLParser to read and store CrontabEntryBeans in xml format
Added XMLSource to manage CrontabEntryBeans in xml format
Solved bug with years logic now the years work like the rest of fields
1.4.1
Updated copyright notice
changed org.jcrontab.Jcrontab to adapt to the right message
Added default values to CrontabEntryBean to avoid nulls in SQLSource
updated GenericSQLSource to remove effectively the CrontabEntryBean
Updated org.jcrontab.data.tests.DAOTest
Applied patch 801052 thanks to Hans Benedict
Applied patch 801051 thanks to Hans Benedict
updated FileSource to remove correctly the CrontabEntryBean
Added junit tests to the ant build.xml
Removed org.jcrontab.tests.TestDAO.java
1.4
Added Basic support for Beans from Tim Stephenson
CHanged MANIFEST.MF to adapt it to the last log4j
Solved bug 769389, now NativeExec works on XP
Adapted to jdk1.4.2 to solve finally nasty mess
Solved a few Deprecation messages
Modified MANIFEST.MF to new log4j
Solved bug 768516, now refresh the list of events every X minutes not hours
Added 666565 patch, to GenericSQL
Removed classpath from MANIFEST.MF
Improved Jcrontab message to adapt it to the real behaviour
1.3
Added org.jcrontab.log.NullLog
Added ClassLoader.getResourceAsStream() from Sergey V. Udalstov
Added toArray methods to CrontabBean and CrontabEntryBean
Removed a few non used private variables Thanks to http://pmd.sourceforge.net
solved bug 624711 thanks to bago75
Solved a nasty bug with nativeExec in win
Adding Holidays Beans and Factories
Added Holidays logic to GenericSQL DAO
Solved a nasty bug with days 31
Added Bussines Days to org.jcrontab.Crontab
Added HolidaysDAOTest
1.2.3
Solved bug 600127 completley (sure!!) :-)
Solved bug 604019
Added setDaemon(boolean) to Crontab, to get bug 600127 completley solved
1.2
Re-Added a toString() method to CrontabEntryBean
Completed seconds & years integration
    DAO's
    CrontabEntry
    SQL